gcc/testsuite/rust/rustc/ui/error-codes/E0164.rs
enum Foo {}

impl Foo {
    const B: u8 = 0;
}

fn bar(foo: Foo) -> u32 {
    match foo {
        Foo::B(i) => i, // { dg-error ".E0164." "" { target *-*-* } }
    }
}

fn main() {
}

